--- a/app/views/game.html
+++ b/app/views/game.html
@@ -8,14 +8,6 @@
     <body>
         <a id="top"></a>
         <div id="cover">
-<<<<<<< HEAD
-            <div id="navigation">
-                <label>You are </label>
-                <input id="playerName" readonly="readonly" maxlength="10"></input>
-                <a href="#top" id="playOrWatchButton">Watch</a>
-                <a href="#playerSettings">Settings</a>
-                <input id="fullScreenButton" type="submit"/>
-=======
             <div class="navigation">
                 <label class="nav-label">You are <input id="player-name" readonly="readonly" maxlength="10"></input></label>
                 <div class="nav-button-bar">
@@ -23,7 +15,6 @@
                     <a href="#playerSettings" title="Go to settings">Settings</a>
                     <button id="full-screen-button" title="Go into full-screen mode"/>
                 </div>
->>>>>>> 2bc0d7a (less reorganization and cleanup)
             </div>
             <div id="killMessages">
             </div>
@@ -42,27 +33,6 @@
                 <div id="playerSettings" class="settingsMenu">
                     <fieldset>
                         <legend>Player Settings</legend>
-<<<<<<< HEAD
-                        <label id="invalidPlayerNameLabel">Please Enter a Valid Name (10 Characters Max)</label>
-                        <div class="playerInfo">
-                            <button id="changePlayerNameButton" class="optionsTextButton">Change Name</button>
-                            <button id="changePlayerColorButton" class="optionsTextButton">Change Color</button>
-                            <button id="toggleGridLinesButton" class="optionsTextButton">Toggle GridLines</button>
-                        </div>
-                        <div class="settingsMenu">
-                            <label for="imageUpload" class="imageUploadLabel">Change Snake Image</label>
-                            <input type="file" id="imageUpload" accept="image/*"/>
-                            <button id="clearUploadedImageButton" class="optionsTextButton">Clear Image</button>
-                        </div>
-                        <div class="settingsMenu">
-                            <label>Customize your snake by uploading an image (Will be scaled down to size)</label>
-                         </div>
-                         <div class="settingsMenu">
-                            <label for="backgroundImageUpload" class="imageUploadLabel">Change Background Image</label>
-                            <input type="file" id="backgroundImageUpload" accept="image/*"/>
-                            <button id="clearUploadedBackgroundImageButton" class="optionsTextButton">Clear Image</button>
-                        </div>
-=======
                         <label id="invalid-player-name-label">Please Enter a Valid Name (10 Characters Max)</label>
                         <ul class="text-button-list">
                             <li><input id="volumeSlider" type="range" min="0" max="1" step="0.2" value="1"></input><img src="assets/volume-icon.png" class="volume-icon"></img></li>
@@ -77,7 +47,6 @@
                             <li><label for="background-image-upload" class="image-upload-label" title="Upload a background image">Change Background Image<input type="file" id="background-image-upload" accept="image/*"/></label></li>
                             <li><button id="clearUploadedBackgroundImageButton" class="options-text-button"  title="Clear uploaded background image">Clear Image</button></li>
                         </ul>
->>>>>>> 2bc0d7a (less reorganization and cleanup)
                     </fieldset>
                 </div>
                 
@@ -85,35 +54,6 @@
                 <div id="adminControls" class="settingsMenu">
                     <fieldset>
                         <legend>Admin Controls</legend>
-<<<<<<< HEAD
-                        <div class="optionsControls" class="settingsMenu">
-                            <label class="optionsLabel">Speed: </label>
-                            <label id="currentSpeed" class="optionsValue"></label>
-                            <input id="decreaseSpeedButton" type="submit" class="minusButton"/>
-                            <input id="increaseSpeedButton" type="submit" class="plusButton"/>
-                            <input id="resetSpeedButton" type="submit" class="resetButton"/>
-                        </div>
-                        <div class="optionsControls" class="settingsMenu">
-                            <label class="optionsLabel">Food: </label>
-                            <label id="currentFoodAmount" class="optionsValue"></label>
-                            <input id="decreaseFoodButton" type="submit" class="minusButton"/>
-                            <input id="increaseFoodButton" type="submit" class="plusButton"/>
-                            <input id="resetFoodButton" type="submit" class="resetButton"/>
-                        </div>
-                        <div class="optionsControls">
-                            <label class="optionsLabel">Bots: </label>
-                            <label id="currentNumberOfBots" class="optionsValue"></label>
-                            <input id="decreaseBotsButton" type="submit" class="minusButton"/>
-                            <input id="increaseBotsButton" type="submit" class="plusButton"/>
-                            <input id="resetBotsButton" type="submit" class="resetButton"/>
-                        </div>
-                        <div class="optionsControls">
-                            <label class="optionsLabel">Start Length: </label>
-                            <label id="currentStartLength" class="optionsValue"></label>
-                            <input id="decreaseStartLengthButton" type="submit" class="minusButton"/>
-                            <input id="increaseStartLengthButton" type="submit" class="plusButton"/>
-                            <input id="resetStartLengthButton" type="submit" class="resetButton"/>
-=======
                         <div class="options-controls" class="settings-menu">
                             <label class="options-label">Speed: </label>
                             <label id="currentSpeed" class="options-value"></label>
@@ -141,18 +81,13 @@
                             <button id="decreaseStartLengthButton" class="minus-button" title="-1"/>
                             <button id="increaseStartLengthButton" class="plus-button" title="+1"/>
                             <button id="resetStartLengthButton" class="reset-button" title="Reset to Default"/>
->>>>>>> 2bc0d7a (less reorganization and cleanup)
                         </div>
                     </fieldset>
                 </div> 
             </div>            
         </div>
-        <script src="js/vendor/socket.io.js"></script>
-        <script src="js/vendor/require.js"></script>
-        <script type="text/javascript">
-            require(['./js/common'], function (common) {
-              require(['main']);
-            });
-        </script>
+        <!-- socket.io client is exposed by the server.  This sets a global variable io -->
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="js/main.js" type="module"></script>
     </body>
 </html>
